JdkConfiguration refactoring.